2013-11-12  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/alerts_status.php: Fixed bug displaying
	embedded metaconsole.

2013-11-12  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/status_monitor.php: Fixed search filter
	in Monitor view.

2013-11-12  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Fix ugly chars in the
	title of the many select options.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the action to click in the search
	bar with something wrote that before the javascript empty this
	field, now it does not empty.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.php: changed the size of the field
	for the name of networkmap.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/map_builder.php: added ids to the links for to
	the make more easy the unit test.
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php: fixed the simple value macros in
	the editor.

2013-11-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* mobile/operation/home.php: Added an option to hide the
	logout button.

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/OpenLayers/OpenLayers.js: Fix layer
	order error that broke the zoom in google maps on GIS for 
	incident #370
	Merged from 4.1

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_treeview.php: Fix the agents query in
	tree view of tags to avoid duplicated agents for
	incident #349

2013-11-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Change the way of store
	the event comments (supporting old way)

	* include/functions_api.php: Improve API clean process
	of the csv output.

2013-11-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the validate event with the
	new validation form.
